.infra/k8s/ms-auth-dpy-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth-dpy-db
  labels:
    tier: ms-lab
spec: 
  minReadySeconds: 15
  replicas: 1
  selector: 
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: auth-db-pd
          image: mongo
          resources:
            requests:
              cpu: '100m'
              memory: "64Mi"
            limits:
              cpu: '500m'
              memory: '336Mi'
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-srv
spec:
  selector:
    app: auth-db
  type: ClusterIP
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
