.infra/k8s/ms-auth-dpy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-auth-dpy
  labels:
    tier: ms-lab #microservices lab
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: auth
        tier: ms-lab
    spec:
      containers:
      - name: auth-api
        image: marknjo/ms-lab-auth
        imagePullPolicy: Never
        ports:
         - containerPort: 3031

        startupProbe:
          tcpSocket:
            port: 3031
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 5
          failureThreshold: 4
        readinessProbe:
          tcpSocket:
            port: 3031
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 2
          failureThreshold: 2
        livenessProbe:
          httpGet:
            port: 3031
            path: /api/v1/users/health
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 120
          failureThreshold: 2

        resources:
          requests: 
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "384Mi"
            cpu: "500m"
        
---
apiVersion: v1
kind: Service
metadata:
  name: ms-auth-srv
  labels:
    tier: ms-lab
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - name: auth-api-pt
    protocol: TCP
    port: 3031
    targetPort: 3031
