.infra/k8s/nats-micros-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-server-dpy
spec:
  selector:
    matchLabels:
      app: nats-server
  template:
    metadata:
      labels:
        app: nats-server
    spec:
      containers:
      - name: nats-server-cnt
        # Deprecated should replace with nats and Jetstream 
        image: nats-streaming
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 4222
        args:
          [
            "-p",
            "4222",
            "-m",
            "8222",
            "-hbi",
            "5s",
            "-hbt",
            "5s",
            "-hbf",
            "2",
            "-SD",
            "-cid",
            "ticketing"
          ]
---
### Nats Server Service
apiVersion: v1
kind: Service
metadata:
  name: nats-server-srv
spec:
  selector:
    app: nats-server
  type: ClusterIP
  ports:
    - name: stan
      protocol: TCP
      port: 4222
      targetPort: 4222

    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
