.infra/k8s/ms-lab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-lab-ingress
  labels:
    tier: ms-lab
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - host: ticketing.dev
    http:
      paths:
      - pathType: Prefix
        path: /api/v[1-9]/users/?(.*)
        backend:
          service:
            name: ms-auth-srv
            port: 
              number: 3031
